Fix vertical align for select base items when colCount is 0

--- a/src/bem/blocks/sv-selectbase.scss
+++ b/src/bem/blocks/sv-selectbase.scss
@@ -3,6 +3,7 @@
 }
 .sv-selectbase__item {
   margin-bottom: 0.425em;
+  vertical-align: top;
 }
 .sv-selectbase__item--inline {
   display: inline-block;
